# SelfBalancingRobot

./: CMakeLists.txt  package.xml  readme.md
include/self_balancing_robot/: operations.hpp  robot_control_rl.hpp  robot_utils.hpp  sbr.hpp
src/: robot_control_pid.cpp
src/control_files/: robot_control_pid.cpp  robot_control_rl.cpp
src/control_files/utils/: robot_utils.cpp
src/launch/: launch.py  pid_control.py
src/models/: basic_sbr.sdf  basic_sbr.xacro
